WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67719
FELighting is using width instead of height to determine y-skip for parallel(n>2) case
https://bugs.webkit.org/show_bug.cgi?id=67719
Summary
FELighting is using width instead of height to determine y-skip for parallel(...
Tim Horton
Reported
2011-09-07 11:09:05 PDT
This causes an OOB read during the methanol benchmark when using more than 2 cores (by applying either the patch in
https://bugs.webkit.org/show_bug.cgi?id=66378
, or the suggestion in
comment #15
of that bug).
Attachments
patch
(1.62 KB, patch)
2011-09-07 11:16 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2011-09-07 11:09:21 PDT
<
rdar://problem/10086178
>
Tim Horton
Comment 2
2011-09-07 11:16:31 PDT
Created
attachment 106604
[details]
patch
WebKit Review Bot
Comment 3
2011-09-07 12:26:43 PDT
Comment on
attachment 106604
[details]
patch Clearing flags on attachment: 106604 Committed
r94698
: <
http://trac.webkit.org/changeset/94698
>
WebKit Review Bot
Comment 4
2011-09-07 12:26:47 PDT
All reviewed patches have been landed. Closing bug.
Zoltan Herczeg
Comment 5
2011-09-07 14:03:45 PDT
Thanks for noticing this.
Tim Horton
Comment 6
2011-09-07 14:07:34 PDT
Credit goes to
https://bugs.webkit.org/show_bug.cgi?id=66378
who is working to make it possible for this to cause problems :-)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug