FELighting is using width instead of height to determine skip for parallel(n>2) case https://bugs.webkit.org/show_bug.cgi?id=67719 <rdar://problem/10086178>

Reviewed by Dirk Schulze.

No new tests, because the bug only exhibits under conditions which are currently
impossible by default (using more than 2 cores) on some platforms.

* platform/graphics/filters/FELighting.cpp:
(WebCore::FELighting::platformApplyGeneric):


Canonical link: https://commits.webkit.org/83594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94698 268f45cc-cd09-0410-ab3c-d52691b4dbfc